--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Functional programming helper library that is aware of (does not duplicate) the latest ECMAScript features, which are polyfillable in all ECMA-262 (even oldest browsers).",
   "main": "index.umd.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha",
+    "compile": "grunt"
   },
   "repository": {
     "type": "git",
